# sok-nids

./: .gitignore  pyproject.toml
docs/superpowers/plans/: 2026-03-30-exp2-pa-xai-integration.md  2026-03-30-pa-lime.md  2026-03-30-pa-xai-constraints-pcap.md  2026-03-30-pa-xai.md  2026-03-30-xai-mode.md  2026-04-04-exp4-xai-parallelism-config.md  2026-04-04-experiment3-overhaul.md
docs/superpowers/specs/: 2026-03-30-exp2-pa-xai-integration-design.md  2026-03-30-pa-xai-constraints-pcap-design.md  2026-03-30-pa-xai-design.md  2026-03-30-xai-mode-design.md  2026-04-04-exp4-xai-parallelism-config-design.md  2026-04-04-experiment3-overhaul-design.md
experiments/: config.yaml  config_loader.py
experiments/1/: cnn_hybrid_models.py  config.py  config.yaml  data_loader.py  explainers.py  lime_tuner.py  main.py  metrics.py  models.py  pa_explainers.py
experiments/1/results/: all_results.json  config.json
experiments/1/results/cic-ids-2017/: evaluation_metrics.json  summary.csv  train_metrics.json
experiments/1/results/cic-iov-2024/: evaluation_metrics.json  summary.csv  train_metrics.json
experiments/1/results/cse-cic-ids2018/: evaluation_metrics.json  summary.csv
experiments/1/results/normal/: all_results.json  config.json
experiments/1/results/nsl-kdd/: evaluation_metrics.json  summary.csv  train_metrics.json
experiments/1/results/protocol-aware/: all_results.json  config.json
experiments/1/results/unsw-nb15/: evaluation_metrics.json  summary.csv  train_metrics.json
experiments/2/: attacks.py  config.py  feature_constraints.py  main.py  pa_constraints.py  pa_explainers.py  robustness.py  scaffolding.py
experiments/2/results/: all_results.json  config.json
experiments/3/: alignment.py  config.py  consensus.py  interactions.py  main.py  visualizations.py
experiments/3/results/: config.json  experiment3_summary.json
experiments/3/results/cic-ids-2017/: .phase_alignment.done  .phase_consensus.done  (+5 more)
experiments/4/: config.py  evaluation.py  feature_selection.py  main.py  models.py  visualization.py  xai_selection.py
experiments/4/results/: all_results.json  benchmark_summary.csv  config.json
experiments/commons/: config.yaml  data_loader.py  explainers.py  models.py
pa_lime/: __init__.py  constraints.py  explainer.py  fuzzer.py  metrics.py  result.py  schemas.py
pa_xai/: __init__.py
pa_xai/core/: __init__.py  baseline.py  constraints.py  metrics.py  result.py  schemas.py
pa_xai/deeplift/: __init__.py  explainer.py  metrics.py
pa_xai/ig/: __init__.py  explainer.py  metrics.py
pa_xai/lime/: __init__.py  explainer.py  fuzzer.py  metrics.py
pa_xai/pcap/: __init__.py  flow_perturbation.py  packet_constraints.py  parser.py  perturbation.py  pipeline.py  semantic_checker.py
pa_xai/shap/: __init__.py  explainer.py  metrics.py
scripts/: check_ig_path_violations.py
tests/: test_lime_tuner.py  test_pa_shap_parallel.py
tests/test_pa_lime/: test_constraints.py  test_explainer.py  test_fuzzer.py  test_integration.py  test_metrics.py  test_schemas.py
tests/test_pa_xai/: test_backwards_compat.py  test_integration.py
tests/test_pa_xai/test_core/: test_baseline.py  test_constraints.py  test_metrics.py  test_result.py  test_schemas.py
tests/test_pa_xai/test_deeplift/: test_explainer.py
tests/test_pa_xai/test_ig/: test_explainer.py
tests/test_pa_xai/test_lime/: test_explainer.py  test_fuzzer.py  test_metrics.py
tests/test_pa_xai/test_pcap/: test_flow_constraints.py  test_packet_constraints.py  test_parser.py  test_perturbation.py  test_pipeline.py  test_semantic_checker.py
tests/test_pa_xai/test_shap/: test_deep_explainer.py  test_kernel_explainer.py  test_tree_explainer.py
(+2114 files in other folders)
