[project]
name = "sok-nids"
version = "0.1.0"
description = "SoK: Experimental Design for Modeling and Evaluating Explainable AI in NIDS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "shap>=0.45.0",
    "lime>=0.2.0",
    "captum>=0.7.0",
    "imbalanced-learn>=0.12.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.12.0",
    "tqdm>=4.66.0",
    "joblib>=1.3.0",
    "imblearn>=0.0",
    "nvidia-cudnn-cu12>=9.19.0.56",
    "nvidia-cublas-cu12>=12.9.1.4",
    "nvidia-cuda-runtime-cu12>=12.9.79",
    "nvidia-cuda-nvrtc-cu12>=12.9.86",
    "nvidia-cufft-cu12>=11.4.1.4",
    "nvidia-curand-cu12>=10.3.10.19",
    "nvidia-cusolver-cu12>=11.7.5.82",
    "nvidia-cusparse-cu12>=12.5.10.65",
    "nvidia-nccl-cu12>=2.29.7",
    "nvidia-nvjitlink-cu12>=12.9.86",
    "nvidia-nvtx-cu12>=12.9.79",
    "nvidia-cusparselt-cu12>=0.8.1",
    "nvidia-nvshmem-cu12>=3.5.21",
    "nvidia-cuda-cupti-cu12>=12.9.79",
    "nvidia-cufile-cu12>=1.14.1.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
